Texture painting: the brush soften at 0.0000001 or a 1 strength has the same result #46441

Closed
opened 2015-10-10 18:43:42 +02:00 by dono dono · 8 comments

System Information
Windows 8

Blender Version
blender 2.75a and blender 2.76RC3

Short description of error
In Texture painting, the brush soften at 0.0000001 or a 1 strength has the same effect. It works well with the sharpen mode.

Exact steps for others to reproduce the error
In texture painting mode, with the brush soften, try at 0.0000001 strength and at 1, the result is the same

http://www.pasteall.org/blend/38491
screenshot: http://www.pasteall.org/pic/show.php?id=93986

Thanks a lot !

**System Information** Windows 8 **Blender Version** blender 2.75a and blender 2.76RC3 **Short description of error** In Texture painting, the brush soften at 0.0000001 or a 1 strength has the same effect. It works well with the sharpen mode. **Exact steps for others to reproduce the error** In texture painting mode, with the brush soften, try at 0.0000001 strength and at 1, the result is the same http://www.pasteall.org/blend/38491 screenshot: http://www.pasteall.org/pic/show.php?id=93986 Thanks a lot !
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ParrotDenis

Added subscriber: @ParrotDenis

This issue was referenced by bb580664e6

This issue was referenced by bb580664e6eae0714ec54f1cefeec5c5560150fc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2015-10-10 23:22:55 +02:00
Author

Thanks a lot Brecht ! :)

Thanks a lot Brecht ! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46441
No description provided.