Fix T46441: texture paint soften brush at 0 strength works at full strength.